--- a/index.html
+++ b/index.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shakur's Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="greenish">Shakurur Rahman</span> World!</h1>
+            <h3>Programming Learner and Upcoming Baby Developer</h3>
+            <p>Currently an attentive learner who is learning from the Programming Hero Web Development course. Also a
+                lead resercher and business campaign strategist.
+            </p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/Shakururrahman">Contact Me</a>
+        </div>
+        <div class="half-width">
+            <img src="images/my-pic.png" alt="Shakur">
+        </div>
+    </section>
 </body>
+
 </html>
