--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
             <img src="images/my-pic.png" alt="Shakur">
         </div>
     </section>
+    <section class="section2">
+        <div class="half-width">
+            <img src="images/my-preperation.png" alt="Preperation">
+        </div>
+        <div class="half-width">
+            <h1>Dream Long</h1>
+            <h2>Become a web developer.</h2>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="link-button" target="_blank" href="">MY RESUME</a>
+        </div>
+    </section>
 </body>
 
 </html>
