--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </section>
 </body>
 <footer>
-    <p>© Peter Parker 2023, a Programming Hero initiative.</p>
+    <p>© Shakurur Rahman 2023, a Programming Hero initiative.</p>
 </footer>
 
 </html>
